# MinecraftCloneV2

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
shaders/: FragmentShader.fshader  VertexShader.vshader
src/: Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Cube.cpp  Game.cpp  Game.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextureManager.cpp  TextureManager.hpp  Utils.hpp  World.cpp  World.hpp  chunk_renderer.cpp  chunk_renderer.hpp  glad.c  noise.hpp  texture.hpp  time.hpp
src/blocks/: Cube.cpp  Cube.hpp  block.cpp  block.hpp
